--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Ms Wears PWA",
-  "short_name": "MsWear",
-  "description": "A test PWA for 2024",
-  "start_url": "pwa-test/",
-  "scope": "pwa-test/",
+  "name": "Jokes PWA",
+  "short_name": "Jokes",
+  "description": "A test Jokes API PWA for 2024 with API caching.",
+  "start_url": "pwa-test-cache/",
+  "scope": "pwa-test-cache/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
